--- a/index.html
+++ b/index.html
@@ -1,11 +1,40 @@
 <!doctype html>
-<html lang="en">
+ <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href='index.css' rel='stylesheet' type='text/css' /> 
   </head>
   <body>
-    <div> aaa </div>
+    <div class='text'>
+
+      <p> Github link: <a href=https://github.com/yahya-tamur/go-backgrounds>https://github.com/yahya-tamur/go-backgrounds</a> </p>
+
+      <p> Screenshots from 'Lettres de Krakovie', youtube <a href=https://youtu.be/IP1_1a-EVb8> link </a> </p>
+
+    </div>
+
+      <img src="vlcsnap-2025-12-10-23h55m48s939.png" />
+      <button onclick="click0()"> copy link </button>
+      <script>click0 = () => {navigator.clipboard.writeText("https://yahya-tamur.github.io/go-backgrounds/vlcsnap-2025-12-10-23h55m48s939.png")}</script>
+      <img src="vlcsnap-2025-12-10-23h55m52s575.png" />
+      <button onclick="click1()"> copy link </button>
+      <script>click1 = () => {navigator.clipboard.writeText("https://yahya-tamur.github.io/go-backgrounds/vlcsnap-2025-12-10-23h55m52s575.png")}</script>
+      <img src="vlcsnap-2025-12-10-23h57m51s141.png" />
+      <button onclick="click2()"> copy link </button>
+      <script>click2 = () => {navigator.clipboard.writeText("https://yahya-tamur.github.io/go-backgrounds/vlcsnap-2025-12-10-23h57m51s141.png")}</script>
+      <img src="vlcsnap-2025-12-10-23h57m09s693.png" />
+      <button onclick="click3()"> copy link </button>
+      <script>click3 = () => {navigator.clipboard.writeText("https://yahya-tamur.github.io/go-backgrounds/vlcsnap-2025-12-10-23h57m09s693.png")}</script>
+      <img src="vlcsnap-2025-12-10-23h57m34s879.png" />
+      <button onclick="click4()"> copy link </button>
+      <script>click4 = () => {navigator.clipboard.writeText("https://yahya-tamur.github.io/go-backgrounds/vlcsnap-2025-12-10-23h57m34s879.png")}</script>
+
+
+    Uncategorized:
+
+
+
   </body>
 </html>
