--- a/index.html
+++ b/index.html
@@ -17,19 +17,34 @@
 
       <img src="vlcsnap-2025-12-10-23h55m48s939.png" />
       <button onclick="click0()"> copy link </button>
-      <script>click0 = () => {navigator.clipboard.writeText("https://yahya-tamur.github.io/go-backgrounds/vlcsnap-2025-12-10-23h55m48s939.png")}</script>
+      <script> click0 = () => {navigator.clipboard.writeText("https://yahya-tamur.github.io/go-backgrounds/vlcsnap-2025-12-10-23h55m48s939.png")} </script>
       <img src="vlcsnap-2025-12-10-23h55m52s575.png" />
       <button onclick="click1()"> copy link </button>
-      <script>click1 = () => {navigator.clipboard.writeText("https://yahya-tamur.github.io/go-backgrounds/vlcsnap-2025-12-10-23h55m52s575.png")}</script>
+      <script> click1 = () => {navigator.clipboard.writeText("https://yahya-tamur.github.io/go-backgrounds/vlcsnap-2025-12-10-23h55m52s575.png")} </script>
       <img src="vlcsnap-2025-12-10-23h57m51s141.png" />
       <button onclick="click2()"> copy link </button>
-      <script>click2 = () => {navigator.clipboard.writeText("https://yahya-tamur.github.io/go-backgrounds/vlcsnap-2025-12-10-23h57m51s141.png")}</script>
+      <script> click2 = () => {navigator.clipboard.writeText("https://yahya-tamur.github.io/go-backgrounds/vlcsnap-2025-12-10-23h57m51s141.png")} </script>
       <img src="vlcsnap-2025-12-10-23h57m09s693.png" />
       <button onclick="click3()"> copy link </button>
-      <script>click3 = () => {navigator.clipboard.writeText("https://yahya-tamur.github.io/go-backgrounds/vlcsnap-2025-12-10-23h57m09s693.png")}</script>
+      <script> click3 = () => {navigator.clipboard.writeText("https://yahya-tamur.github.io/go-backgrounds/vlcsnap-2025-12-10-23h57m09s693.png")} </script>
       <img src="vlcsnap-2025-12-10-23h57m34s879.png" />
       <button onclick="click4()"> copy link </button>
-      <script>click4 = () => {navigator.clipboard.writeText("https://yahya-tamur.github.io/go-backgrounds/vlcsnap-2025-12-10-23h57m34s879.png")}</script>
+      <script> click4 = () => {navigator.clipboard.writeText("https://yahya-tamur.github.io/go-backgrounds/vlcsnap-2025-12-10-23h57m34s879.png")} </script>
+
+
+    <div>
+
+        <p> Stones from <a href=tsumego.com>Tsumego Hero</a> </p>
+
+    </div>
+
+      <img src="black34.png" />
+      <button onclick="click5()"> copy link </button>
+      <script> click5 = () => {navigator.clipboard.writeText("https://yahya-tamur.github.io/go-backgrounds/black34.png")} </script>
+
+      <img src="white34.png" />
+      <button onclick="click6()"> copy link </button>
+      <script> click6 = () => {navigator.clipboard.writeText("https://yahya-tamur.github.io/go-backgrounds/white34.png")} </script>
 
 
     Uncategorized:
