--- a/schema.html
+++ b/schema.html
@@ -17,6 +17,15 @@
 
 $#vlcsnap-2025-12-10#$
 
+    <div>
+
+        <p> Stones from <a href=tsumego.com>Tsumego Hero</a> </p>
+
+    </div>
+
+$#black34.png#$
+$#white34.png#$
+
     Uncategorized:
 
 $#OTHERS#$
