--- a/schema.html
+++ b/schema.html
@@ -11,6 +11,8 @@
 
       <p> Github link: <a href=https://github.com/yahya-tamur/go-backgrounds>https://github.com/yahya-tamur/go-backgrounds</a> </p>
 
+      <p> grid color: 176, 176, 176 </p>
+
       <p> Screenshots from 'Lettres de Krakovie', youtube <a href=https://youtu.be/IP1_1a-EVb8> link </a> </p>
 
     </div>
